--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,17 @@
         <developerConnection>scm:git:ssh://github.com/KartoffelChipss/ColorLab4J.git</developerConnection>
     </scm>
 
+    <distributionManagement>
+        <repository>
+            <id>github-releases</id>
+            <url>https://maven.pkg.github.com/KartoffelChipss/ColorLab4J</url>
+        </repository>
+        <snapshotRepository>
+            <id>github-snapshots</id>
+            <url>https://maven.pkg.github.com/KartoffelChipss/ColorLab4J</url>
+        </snapshotRepository>
+    </distributionManagement>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
